--- a/01 - JavaScript Drum Kit/index.html
+++ b/01 - JavaScript Drum Kit/index.html
@@ -57,6 +57,6 @@
         <audio data-key="75" src="sounds/tom.wav"></audio>
         <audio data-key="76" src="sounds/tink.wav"></audio>
 
-        <script></script>
+        <script src="index.js"></script>
     </body>
 </html>
