--- a/08 - Fun with HTML5 Canvas/index.html
+++ b/08 - Fun with HTML5 Canvas/index.html
@@ -1,20 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>HTML5 Canvas</title>
-  <link rel="icon" href="https://fav.farm/🔥" />
-</head>
-<body>
-<canvas id="draw" width="800" height="800"></canvas>
-<script>
-</script>
+  <head>
+    <meta charset="UTF-8">
+    <title>HTML5 Canvas</title>
+    <link rel="icon" href="https://fav.farm/🔥" />
+  </head>
 
-<style>
-  html, body {
-    margin: 0;
-  }
-</style>
-
-</body>
+  <body>
+    <canvas id="draw" width="800" height="800"></canvas>
+    <script src="index.js"></script>
+  </body>
 </html>
