--- a/27 - Click and Drag/index.html
+++ b/27 - Click and Drag/index.html
@@ -35,6 +35,6 @@
       <div class="item item25">25</div>
     </div>
 
-  <script src="inddex.js"></script>
+  <script src="index.js"></script>
   </body>
 </html>
