--- a/29 - Countdown Timer/index.html
+++ b/29 - Countdown Timer/index.html
@@ -25,6 +25,6 @@
       </div>
     </div>
 
-    <script src="scripts-START.js"></script>
+    <script src="index.js"></script>
   </body>
 </html>
